Test Sandbox Project/src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Arrival__c</fullName>
        <label>Arrival</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Code__c</fullName>
        <label>Book Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <label>Departure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <formula>Payment__r.Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Age__c</fullName>
        <label>Order Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_History__c</fullName>
        <label>Order History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partial_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passanger_Name__c</fullName>
        <label>Passanger Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Seller)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Train_Name__c</fullName>
        <label>Train Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Buyer__c</columns>
        <columns>Seller__c</columns>
        <columns>Train_Name__c</columns>
        <columns>Arrival__c</columns>
        <columns>Class__c</columns>
        <columns>Order_Age__c</columns>
        <columns>Order_History__c</columns>
        <columns>Passanger_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>